fixed width issue on IE

--- a/src/sass/components/home/_home.about.scss
+++ b/src/sass/components/home/_home.about.scss
@@ -66,9 +66,7 @@ $benefit-top-spacing-medium: $layout-spacing-xs;
   }
   &__benefits-icon {
     margin-top: 7px;
-    width: 70px;
     font-size: 58px;
-    float: left;
     margin-right: $icon-right-margin;
     height: 100px;
     color: $chart-icon-color;
